<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/login_bg"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textColorHint="#ffffff"
        android:hint="@string/prompt_mobile"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:maxLines="1"
        android:textStyle="bold"
        android:padding="6dp"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:textColorHint="#ffffff"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#000"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="6dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>