<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRegister"
    android:layout_width="match_parent"
    android:background="@drawable/login_bg"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:maxLength="10"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textColorHint="#ffffff"
        android:hint="@string/prompt_name"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textColorHint="#ffffff"
        android:hint="@string/prompt_mobile"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:maxLength="10"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textColorHint="#ffffff"
        android:hint="@string/prompt_email"/>


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:maxLines="1"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:textColorHint="#ffffff"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:maxLines="1"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="#ffffff"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:maxLength="10"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textColorHint="#ffffff"
        android:hint="@string/prompt_address"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#000"
        android:text="Submit"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>

</RelativeLayout>